# product_calendar_lib

./: .gitignore  Cargo.toml  LICENSE.md  README.md
src/: day.rs  day_impls.rs  errors.rs  lib.rs  parser.rs  pc.rs  product_calendar.rs  statistic.rs
src/day/: impls.rs  kind.rs  mod.rs
src/day/deser/: date.rs  mod.rs  weekday.rs
wheels/: product_calendar-0.2.0-cp310-cp310-macosx_11_0_arm64.whl  product_calendar-0.2.0-cp311-cp311-macosx_11_0_arm64.whl  product_calendar-0.2.0-cp312-cp312-macosx_11_0_arm64.whl  product_calendar-0.2.0-cp313-cp313-macosx_11_0_arm64.whl  product_calendar-0.4.0-cp310-cp310-macosx_11_0_arm64.whl  product_calendar-0.4.0-cp311-cp311-macosx_11_0_arm64.whl  product_calendar-0.4.0-cp312-cp312-macosx_11_0_arm64.whl  product_calendar-0.4.0-cp313-cp313-macosx_11_0_arm64.whl
