[package]
name = "product_calendar"
version = "0.3.0"
edition = "2021"

# See more keys and thcrate-type = ["cdylib"]

[lib]
name = "product_calendar"
crate-type = ["cdylib"]

[dependencies.pyo3]
version = "0.22.2"
features = ["extension-module", "chrono"]

[dependencies]
chrono = "0.4.38"
reqwest = {version = "0.12.4", features = ["blocking"]}
scraper = "0.19.0"
serde = {version = "1.0.199", features = ["derive"]}
serde_json = "1.0.116"
thiserror = "1.0.59"
lazy_static = "1.5.0"
